Switched to Java 17