@@ -4,6 +4,6 @@ public class CourierNotFoundException extends RuntimeException {
 
 
 	public CourierNotFoundException(long courierId) {
-		super(String.format("Courier with id [%s] not found", courierId));
+		super("Courier with id [%s] not found".formatted(courierId));
 	}
 }
